added header and styles

--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <script src="https://kit.fontawesome.com/c3eced3f24.js" crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href="styles/style.css">
     <title>Rahat Rahman | Portfolio</title>
 </head>
 <body>
-    
+    <header>
+        <div class="wrapper">
+            <nav>
+                <ul>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Skills</a></li>
+                    <li><a href="">Projects</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="heading">
+                <h1>Hello! I'm Rahat Rahman!</h1>
+                <h2>I am a front-end web developer based in Toronto, ON.</h2>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
