added skills section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script src="https://kit.fontawesome.com/c3eced3f24.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/c3eced3f24.js" crossorigin="anonymous"></script>
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Rahat Rahman | Portfolio</title>
 </head>
@@ -25,5 +27,126 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="about">
+            <div class="wrapper">
+                <h2>about</h2>
+                <p>I'm a front-end web developer located in Toronto, ON. I am passionate about web as a platform since it is open, free and
+                democratic and which provides the maximum reach of users. I love to create web applications that are user interactive,
+                accessible and responsive while making my code clean and DRY. I am well versed in Agile and Waterfall software
+                development methodologies and have extensive experience working in Scrum teams. I am also proficient in testing web and
+                mobile applications enusring all business requirements have been met.</p>
+                <p>I'm very eager to make use of all my old and newly acquired skills and be part of an exciting team where I can reach my
+                full potential to learn and grow my development skills. If you think I have what are looking for, let's get in touch then!</p>
+            </div>
+        </section>
+        <section class="skills">
+            <div class="wrapper">
+                <h2>skills</h2>
+                <!-- add aria label -->
+                <!-- add agile logo -->
+                <ul class="icons">
+                    <li>
+                        <i class="fab fa-html5"></i>
+                        <p>HTML5</p>
+                    </li>
+                    <li>
+                        <i class="fab fa-css3-alt"></i>
+                        <p>CSS3</p>
+                    </li>
+                    <li>
+                        <i class="fab fa-sass"></i>
+                        <p>Sass</p>
+                    </li>
+                    <li>
+                        <i class="fab fa-js"></i>
+                        <p>JavaScript</p>
+                    </li>
+                    <li>
+                        <i class="devicon-jquery-plain"></i>
+                        <p>jQuery</p>
+                    </li>
+                    <li>
+                        <i class="fab fa-react"></i>
+                        <p>React</p>
+                    </li>
+                    <li>
+                        <span class="iconify" data-icon="mdi-firebase" data-inline="false"></span>
+                        <p>Firebase</p>
+                    </li>
+                    <li>
+                        <i class="fas fa-universal-access"></i>
+                        <p>Accessibility</p>
+                    </li>
+                    <li>
+                        <span class="iconify" data-icon="mdi:responsive" data-inline="false"></span>
+                        <p>Responsive</p>
+                    </li>
+                    <li>
+                        <span class="iconify" data-icon="dashicons:rest-api" data-inline="false"></span>
+                        <p>REST API</p>
+                    </li>
+                    <li>
+                        <!-- <i class="fas fa-code-branch"></i> -->
+                        <i class="devicon-git-plain"></i>
+                        <p>Git</p>
+                    </li>
+                    <li>
+                        <i class="devicon-confluence-plain"></i>
+                        <p>Confluence</p>
+                    </li>
+                    <li>
+                        <i class="devicon-visualstudio-plain"></i>
+                        <p>VS Code</p>
+                    </li>
+                    <li>
+                        <i class="fas fa-terminal"></i>
+                        <p>Terminal</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="projects">
+            <div class="wrapper">
+                <h2>projects</h2>
+                <div class="project">
+                    <div><img src="assets/images/TILES.png" alt="screenshot of TILES project showing all the tiles as matched"></div>
+                    <div>
+                        <h3>tiles</h3>
+                        <p>A tile based memory game where the player matches the tiles using colours. Keeps track of the number of options needed to match the tiles. Offers a continuous mode play option @320px.</p>
+                        <ul class="icons">
+                            <li>
+                                <i class="fab fa-html5"></i>
+                                <p>HTML5</p>
+                            </li>
+                            <li>
+                                <i class="fab fa-css3-alt"></i>
+                                <p>CSS3</p>
+                            </li>
+                            <li>
+                                <i class="fab fa-sass"></i>
+                                <p>Sass</p>
+                            </li>
+                            <li>
+                                <i class="fab fa-js"></i>
+                                <p>JavaScript</p>
+                            </li>
+                            <li>
+                                <i class="devicon-jquery-plain"></i>
+                                <p>jQuery</p>
+                            </li>
+                            <li>
+                                <span class="iconify" data-icon="mdi:responsive" data-inline="false"></span>
+                                <p>Responsive</p>
+                            </li>
+                        </ul>
+                        <!-- <p>HTML5 // CSS3 // Sass // JavaScript // jQuery // Responsive</p> -->
+                        <a href="https://rahatrahman.com/TILES/" target="_blank" rel="noopener noreferrer">Live Link</a>
+                        <a href="https://github.com/rahatbd/rahatRahmanProjectThree" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
