added projects section

--- a/index.html
+++ b/index.html
@@ -109,40 +109,41 @@
         <section class="projects">
             <div class="wrapper">
                 <h2>projects</h2>
-                <div class="project">
-                    <div><img src="assets/images/TILES.png" alt="screenshot of TILES project showing all the tiles as matched"></div>
-                    <div>
-                        <h3>tiles</h3>
-                        <p>A tile based memory game where the player matches the tiles using colours. Keeps track of the number of options needed to match the tiles. Offers a continuous mode play option @320px.</p>
-                        <ul class="icons">
-                            <li>
-                                <i class="fab fa-html5"></i>
-                                <p>HTML5</p>
-                            </li>
-                            <li>
-                                <i class="fab fa-css3-alt"></i>
-                                <p>CSS3</p>
-                            </li>
-                            <li>
-                                <i class="fab fa-sass"></i>
-                                <p>Sass</p>
-                            </li>
-                            <li>
-                                <i class="fab fa-js"></i>
-                                <p>JavaScript</p>
-                            </li>
-                            <li>
-                                <i class="devicon-jquery-plain"></i>
-                                <p>jQuery</p>
-                            </li>
-                            <li>
-                                <span class="iconify" data-icon="mdi:responsive" data-inline="false"></span>
-                                <p>Responsive</p>
-                            </li>
-                        </ul>
-                        <!-- <p>HTML5 // CSS3 // Sass // JavaScript // jQuery // Responsive</p> -->
-                        <a href="https://rahatrahman.com/TILES/" target="_blank" rel="noopener noreferrer">Live Link</a>
-                        <a href="https://github.com/rahatbd/rahatRahmanProjectThree" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+                <div class="projectList">
+                    <div class="project projectOne">
+                        <div><img src="assets/images/TILES.png" alt="screenshot of TILES project showing all the tiles as matched"></div>
+                        <div>
+                            <!-- styles on CSS -->
+                            <h3>TILES</h3>
+                            <p>A tile based memory game where the player matches the tiles using colours. Keeps track of the number of attempts required to match the tiles. Offers a continuous mode play option @320px.</p>
+                            <p>HTML5 || CSS3 || Sass || JavaScript || jQuery || Responsive</p>
+                            <a href="https://rahatrahman.com/TILES/" target="_blank" rel="noopener noreferrer">Live Link</a>
+                            <a href="https://github.com/rahatbd/rahatRahmanProjectThree" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+                        </div>
+                    </div>
+                    <!-- clone this repo -->
+                    <div class="project projectTwo">
+                        <div><img src="assets/images/NEWS.png" alt="screenshot of news project showing the latest canadian headlines"></div>
+                        <h3>Project News</h3>
+                        <p>A news aggregator website made using the NewsAPI. The website fetches the latest headlines along with news from three other categories for both Canada and US.</p>
+                        <p>HTML5 || CSS3 || Sass || JavaScript || jQuery || Responsive || Rest API || Pair Programming</p>
+                        <a href="https://rahatrahman.com/ProjectNews/" target="_blank" rel="noopener noreferrer">Live Link</a>
+                        <a href="https://github.com/Project-News/kristenScheelRahatRahmanProjectFour" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+                    </div>
+                    <div class="project projectThree">
+                        <div><img src="assets/images/COVID19.png" alt="screenshot of covid 19 project showing the canadian case numbers on August 25 until 3:37 pm EDT"></div>
+                        <h3>Covid-19 Tracker</h3>
+                        <p>A Covid-19 app that displays the latest coronavirus case numbers globally as well as for 186 countries or territories using the COVID 19 API.</p>
+                        <p>HTML5 || CSS3 || JavaScript || React || Responsive || Rest API</p>
+                        <a href="https://rahatrahman.com/covid19/" target="_blank" rel="noopener noreferrer">Live Link</a>
+                        <a href="https://github.com/rahatbd/covid19" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+                    </div>
+                    <div class="project projectFour">
+                        <div><img src="assets/images/project-2.png" alt="screenshot of project two showing the header image, heading and menu items"></div>
+                        <h3>Under the Sea</h3>
+                        <p>A multi-page client PSD conversion project that is fully responsive across all devices and made pixel-perfect using a style guide and design specification.</p>
+                        <p>HTML5 || CSS3 || Sass || Responsive</p>
+                        <a href="https://github.com/rahatbd/-rahat-rahman-project-two" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
                     </div>
                 </div>
             </div>
