added animations on header

--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
     <script src="scripts/scramble.js"></script>
     <script src="scripts/script.js"></script>
     <script>
-        const options = {
-            strings: ['a front-end web developer.', 'based in Toronto.'],
-            typeSpeed: 60,
-            backSpeed: 40,
-            loop: true,
-        }
-        const typed = new Typed('.typed', options);
+        // const options = {
+        //     strings: ['a front-end web developer.', 'based in Toronto.'],
+        //     typeSpeed: 60,
+        //     backSpeed: 40,
+        //     loop: true,
+        // }
+        // const typed = new Typed('.typed', options);
     </script>
 </body>
 </html>
