--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
                 <h1 class="name"></h1>
                 <p>I am <span class="typed"></span></p>
             </div>
+            <!-- check accesibility -->
+            <i class="fas fa-mouse" id="mouse"></i>
         </div>
     </header>
 
     <main>
-        <section class="about">
+        <section class="about" id="about">
             <div class="wrapper">
                 <h2>about</h2>
                 <p>I'm a front-end web developer located in Toronto, ON. I am passionate about web as a platform since it is open, free and
@@ -154,19 +156,10 @@
         </section>
     </main>
 
+    <!-- scramble.js courtesy of the YouTube video channel 'Online web ustaad'. Refer to the original video here: https://www.youtube.com/watch?v=lI303Jm4fbs -->
     <script src='https://code.jquery.com/jquery-3.5.1.min.js' integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=' crossorigin='anonymous'></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
-    <!-- check -->
     <script src="scripts/scramble.js"></script>
     <script src="scripts/script.js"></script>
-    <script>
-        // const options = {
-        //     strings: ['a front-end web developer.', 'based in Toronto.'],
-        //     typeSpeed: 60,
-        //     backSpeed: 40,
-        //     loop: true,
-        // }
-        // const typed = new Typed('.typed', options);
-    </script>
 </body>
 </html>
