--- a/index.html
+++ b/index.html
@@ -36,19 +36,25 @@
     <main>
         <section class="about" id="about">
             <div class="wrapper">
-                <h2>about</h2>
-                <p>I'm a front-end web developer located in Toronto, ON. I am passionate about web as a platform since it is open, free and
-                democratic and which provides the maximum reach of users. I love to create web applications that are user interactive,
-                accessible and responsive while making my code clean and DRY. I am well versed in Agile and Waterfall software
-                development methodologies and have extensive experience working in Scrum teams. I am also proficient in testing web and
-                mobile applications enusring all business requirements have been met.</p>
-                <p>I'm very eager to make use of all my old and newly acquired skills and be part of an exciting team where I can reach my
-                full potential to learn and grow my development skills. If you think I have what are looking for, let's get in touch then!</p>
+                <h2>About</h2>
+                <div class="aboutSection">
+                    <div><img src="assets/images/profile.jpg" alt="a sketch of Rahat Rahman's profile"></div>
+                    <div>
+                        <p>I'm a front-end web developer located in Toronto, ON. I am passionate about web as a platform since it is open, free and
+                        democratic and which provides the maximum reach of users. I love to create web applications that are user interactive,
+                        accessible and responsive while making my code clean and DRY. I am well versed in Agile and Waterfall software
+                        development methodologies and have extensive experience working in Scrum teams. I am also proficient in testing web and
+                        mobile applications ensuring all business requirements have been met.</p>
+                        <p>I'm very eager to make use of all my old and newly acquired skills and be part of an exciting team where I can reach my
+                        full potential to learn and grow as a developer. If you think I have what you are looking for, let's get in touch!</p>
+                    </div>
+                </div>
             </div>
         </section>
+
         <section class="skills">
             <div class="wrapper">
-                <h2>skills</h2>
+                <h2>Skills</h2>
                 <!-- add aria label -->
                 <!-- add agile logo -->
                 <ul class="icons">
@@ -112,6 +118,7 @@
                 </ul>
             </div>
         </section>
+
         <section class="projects">
             <div class="wrapper">
                 <h2>projects</h2>
