updated skill section

--- a/index.html
+++ b/index.html
@@ -55,64 +55,76 @@
         <section class="skills">
             <div class="wrapper">
                 <h2>Skills</h2>
-                <!-- add aria label -->
-                <!-- add agile logo -->
                 <ul class="icons">
                     <li>
-                        <i class="fab fa-html5"></i>
+                        <i class="fab fa-html5" aria-hidden="true"></i>
+                        <span class="sr-only">HTML5 logo</span>
                         <p>HTML5</p>
                     </li>
                     <li>
-                        <i class="fab fa-css3-alt"></i>
+                        <i class="fab fa-css3-alt" aria-hidden="true"></i>
+                        <span class="sr-only">CSS3 logo</span>
                         <p>CSS3</p>
                     </li>
                     <li>
-                        <i class="fab fa-sass"></i>
+                        <i class="fab fa-sass" aria-hidden="true"></i>
+                        <span class="sr-only">sass logo</span>
                         <p>Sass</p>
                     </li>
                     <li>
-                        <i class="fab fa-js"></i>
+                        <i class="fab fa-js" aria-hidden="true"></i>
+                        <span class="sr-only">javascript logo</span>
                         <p>JavaScript</p>
                     </li>
                     <li>
-                        <i class="devicon-jquery-plain"></i>
+                        <i class="devicon-jquery-plain" aria-hidden="true"></i>
+                        <span class="sr-only">jquery logo</span>
                         <p>jQuery</p>
                     </li>
                     <li>
-                        <i class="fab fa-react"></i>
+                        <i class="fab fa-react" aria-hidden="true"></i>
+                        <span class="sr-only">react logo</span>
                         <p>React</p>
                     </li>
                     <li>
-                        <span class="iconify" data-icon="mdi-firebase" data-inline="false"></span>
+                        <span class="iconify" data-icon="mdi-firebase" data-inline="false" aria-hidden="true"></span>
+                        <span class="sr-only">firebase logo</span>
                         <p>Firebase</p>
                     </li>
                     <li>
-                        <i class="fas fa-universal-access"></i>
+                        <i class="fas fa-universal-access" aria-hidden="true"></i>
+                        <span class="sr-only">accessibility logo</span>
                         <p>Accessibility</p>
                     </li>
                     <li>
-                        <span class="iconify" data-icon="mdi:responsive" data-inline="false"></span>
+                        <span class="iconify" data-icon="mdi:responsive" data-inline="false" aria-hidden="true"></span>
+                        <span class="sr-only">responsive design logo</span>
                         <p>Responsive</p>
                     </li>
                     <li>
-                        <span class="iconify" data-icon="dashicons:rest-api" data-inline="false"></span>
+                        <span class="iconify" data-icon="dashicons:rest-api" data-inline="false" aria-hidden="true"></span>
+                        <span class="sr-only">rest API logo</span>
                         <p>REST API</p>
                     </li>
                     <li>
-                        <!-- <i class="fas fa-code-branch"></i> -->
-                        <i class="devicon-git-plain"></i>
-                        <p>Git</p>
+                        <i class="fas fa-code-branch" aria-hidden="true"></i>
+                        <span class="sr-only">github logo</span>
+                        <!-- <i class="devicon-git-plain"></i> -->
+                        <p>GitHub</p>
                     </li>
                     <li>
-                        <i class="devicon-confluence-plain"></i>
+                        <i class="devicon-confluence-plain" aria-hidden="true"></i>
+                        <span class="sr-only">confluence logo</span>
                         <p>Confluence</p>
                     </li>
                     <li>
-                        <i class="devicon-visualstudio-plain"></i>
+                        <i class="devicon-visualstudio-plain" aria-hidden="true"></i>
+                        <span class="sr-only">VS code logo</span>
                         <p>VS Code</p>
                     </li>
                     <li>
-                        <i class="fas fa-terminal"></i>
+                        <i class="fas fa-terminal" aria-hidden="true"></i>
+                        <span class="sr-only">terminal logo</span>
                         <p>Terminal</p>
                     </li>
                 </ul>
