added contact section

--- a/index.html
+++ b/index.html
@@ -175,6 +175,26 @@
                 </div>
             </div>
         </section>
+
+        <section class="blog">
+            <div class="wrapper">
+                <h2>Blog</h2>
+            </div>
+        </section>
+
+        <section class="contact">
+            <div class="wrapper">
+                <h2>Contact</h2>
+                <form>
+                    <input type="text" name="name" id="name" placeholder="Name" required>
+                    <label for="nanme" class="sr-only">name</label>
+                    <input type="email" name="email" id="email" placeholder="Email" required>
+                    <label for="email" class="sr-only">email</label>
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Message" required></textarea>
+                    <button type="submit">send</button>
+                </form>
+            </div>
+        </section>
     </main>
 
     <!-- scramble.js courtesy of the YouTube video channel 'Online web ustaad'. Refer to the original video here: https://www.youtube.com/watch?v=lI303Jm4fbs -->
