--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <section class="contact">
             <div class="wrapper">
                 <h2>Contact</h2>
-                <form>
+                <form action="https://formspree.io/maypgnpq" method="POST">
                     <input type="text" name="name" id="name" placeholder="Name" required>
                     <label for="nanme" class="sr-only">name</label>
                     <input type="email" name="email" id="email" placeholder="Email" required>
