added media queries

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="wrapper">
                 <h2>About</h2>
                 <div class="aboutSection">
-                    <div><img src="assets/images/profile.jpg" alt="a sketch of Rahat Rahman's profile"></div>
+                    <div class="profile"><img src="assets/images/profile.jpg" alt="a sketch of Rahat Rahman's profile"></div>
                     <div>
                         <p>I'm a front-end web developer located in Toronto, ON. I am passionate about web as a platform since it is open, free and democratic and which provides the maximum reach of users. I love to create web applications that are user interactive, accessible and responsive while making my code clean and DRY.</p>
                         <p>I am well versed in Agile and Waterfall software development methodologies and have extensive experience working in Scrum teams. I am also proficient in testing web and mobile applications ensuring all business requirements have been met.</p>
@@ -133,7 +133,7 @@
             <div class="wrapper">
                 <h2>Projects</h2>
                 <div class="project projectOne">
-                    <div><img src="assets/images/TILES.png" alt="screenshot of TILES project showing all the tiles as matched"></div>
+                    <div class="screenshot"><img src="assets/images/TILES.png" alt="screenshot of TILES project showing all the tiles as matched"></div>
                     <div class="description">
                         <h3>tiles</h3>
                         <p>A tile based memory game where the player matches the tiles using colours. Keeps track of the number of attempts required to match the tiles. Offers a continuous mode play option @320px.</p>
@@ -143,7 +143,7 @@
                     </div>
                 </div>
                 <div class="project projectTwo">
-                    <div><img src="assets/images/NEWS.png" alt="screenshot of news project showing the latest canadian headlines"></div>
+                    <div class="screenshot"><img src="assets/images/NEWS.png" alt="screenshot of news project showing the latest canadian headlines"></div>
                     <div class="description">
                         <h3>news project</h3>
                         <p>A news aggregator website made using the NewsAPI. The website fetches the latest headlines along with news from three other categories for both Canada and US.</p>
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div class="project projectThree">
-                    <div><img src="assets/images/COVID19.png" alt="screenshot of covid 19 project showing the canadian case numbers on August 25 until 3:37 pm EDT"></div>
+                    <div class="screenshot"><img src="assets/images/COVID19.png" alt="screenshot of covid 19 project showing the canadian case numbers on August 25 until 3:37 pm EDT"></div>
                     <div class="description">
                         <h3>covid-19 tracker</h3>
                         <p>A COVID-19 tracking app that displays the latest coronavirus case numbers globally as well as for 186 countries or territories using the COVID 19 API.</p>
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 <div class="project projectFour">
-                    <div><img src="assets/images/project-2.png" alt="screenshot of under the sea project showing the header image, heading and menu items"></div>
+                    <div class="screenshot"><img src="assets/images/project-2.png" alt="screenshot of under the sea project showing the header image, heading and menu items"></div>
                     <div class="description">
                         <h3>under the sea</h3>
                         <p>A multi-page client PSD conversion project that is fully responsive across all devices and made pixel-perfect using a style guide and design specification.</p>
