--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             </nav>
             <div class="heading">
                 <h1 class="name"></h1>
+                <!-- update with sr-only -->
                 <p>I am <span class="typed"></span></p>
+                <!-- update with sr-only -->
             </div>
             <i class="fas fa-mouse" id="mouse" aria-hidden="true"></i>
         </div>
@@ -210,7 +212,7 @@
 
     <footer>
         <div class="wrapper">
-            <p>Made with 🤍 in Toronto. &#169; Rahat Rahman 2020.</p>
+            <p>Made with 🤍 in Toronto. <span>&#169; Rahat Rahman 2020.</span></p>
         </div>
     </footer>
 
