--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c3eced3f24.js" crossorigin="anonymous"></script>
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
     <link href="assets/favicons/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
     <link href="assets/favicons/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
     <link href="assets/favicons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
     <link href="assets/favicons/site.webmanifest" rel="manifest">
-    <link href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css" rel="stylesheet">
+    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet">
     <title>Rahat Rahman | Portfolio</title>
 </head>
@@ -199,11 +201,20 @@
                         <button type="submit">send</button>
                     </form>
                     <div>
-                        <p>Thank you for visiting my portfolio. If you would like to connect, you can contact me through my form on the left.</p>
-                        <p>Or you can find me on social media!</p>
+                        <p>Thank you for visiting my portfolio. If you would like to connect, you can contact me through my form on the <span class="left">left</span><span class="top">top</span>!</p>
+                        <p>You can also find me on social media or book a meeting through Calendly below!</p>
                         <a href="https://medium.com/@rahat.me/my-journey-with-juno-d4a778dce6ff" target="_blank" rel="noopener noreferrer" aria-label="go to Rahat Rahman's blog on medium"><i class="fab fa-medium-m" aria-hidden="true"></i></a>
                         <a href="https://github.com/rahatbd?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="go to Rahat Rahman's repo on github"><i class="fab fa-github-alt" aria-hidden="true"></i></a>
                         <!-- <a href=""><i class="fab fa-medium"></i></a> -->
+                        <!-- aria-label="go to Rahat Rahman's calendly to book a 30 minute meeting" -->
+                        <a href="" onclick="Calendly.initPopupWidget({url:'https://calendly.com/rahatrahman/30min'});return false;">
+                            <svg height="40" viewBox="7.4 0 344.6 360" width="40" xmlns="http://www.w3.org/2000/svg">
+                                <g fill="#fafafa">
+                                    <path d="m313.8 360h-268.3c-21 0-38.1-17.1-38.1-38.1v-268.4c0-21 17.1-38.1 38.1-38.1h268.3c21 0 38.1 17.1 38.1 38.1v268.3c.1 21.1-17 38.2-38.1 38.2zm-268.3-323.5c-9.4 0-17 7.6-17 17v268.3c0 9.4 7.6 17 17 17h268.3c9.4 0 17-7.6 17-17v-268.3c0-9.4-7.6-17-17-17z"/>
+                                    <path d="m256.6 72.4c-4.5 0-8.1-3.6-8.1-8.1v-56.2c0-4.5 3.6-8.1 8.1-8.1s8.1 3.6 8.1 8.1v56.1c0 4.5-3.6 8.2-8.1 8.2zm-154.7 0c-4.5 0-8.1-3.6-8.1-8.1v-56.2c0-4.5 3.6-8.1 8.1-8.1s8.1 3.6 8.1 8.1v56.1c.1 4.5-3.6 8.2-8.1 8.2zm87.5 181.4c-33.6 0-60.9-27.3-60.9-60.9s27.3-60.9 60.9-60.9c15.2 0 29.7 5.6 40.9 15.8 1.4 1.2 1.5 3.4.2 4.7-1.2 1.4-3.4 1.5-4.7.2-10-9.1-22.9-14.1-36.4-14.1-29.9 0-54.2 24.3-54.2 54.2s24.3 54.2 54.2 54.2c13.5 0 26.4-5 36.4-14.1 1.4-1.2 3.5-1.1 4.7.2 1.2 1.4 1.1 3.5-.2 4.7-11.2 10.4-25.7 16-40.9 16z"/>
+                                </g>
+                            </svg>
+                        </a>
                     </div>
                 </div>
             </div>
