--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177713480-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-177713480-1');
+    </script>
     <script src="https://kit.fontawesome.com/c3eced3f24.js" crossorigin="anonymous"></script>
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
@@ -10,7 +18,7 @@
     <link href="assets/favicons/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
     <link href="assets/favicons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
     <link href="assets/favicons/site.webmanifest" rel="manifest">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css" rel="stylesheet">
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet">
@@ -30,12 +38,12 @@
                 </ul>
             </nav>
             <div class="heading">
-                <h1 class="name"></h1>
-                <!-- update with sr-only -->
-                <p>I am <span class="typed"></span></p>
-                <!-- update with sr-only -->
+                <h1><span class="sr-only">Rahat Rahman</span><span class="name" aria-hidden="true"></span></h1>
+                <p aria-hidden="true">I am <span class="typed"></span></p>
+                <p class="sr-only">I am a front-end web developer.</p>
+                <p class="sr-only">I am based in Toronto.</p>
             </div>
-            <i class="fas fa-mouse" id="mouse" aria-hidden="true"></i>
+            <a href="#about"><i class="fas fa-mouse" aria-hidden="true"></i></a>
         </div>
     </header>
 
@@ -44,7 +52,7 @@
             <div class="wrapper">
                 <h2>About</h2>
                 <div class="aboutSection">
-                    <div class="profile"><img src="assets/images/profile.jpg" alt="a sketch of Rahat Rahman's profile"></div>
+                    <!-- <div class="profile"><img src="assets/images/profile.jpg" alt="a sketch of Rahat Rahman's profile"></div> -->
                     <div>
                         <p>I'm a front-end web developer located in Toronto, ON. I am passionate about web as a platform since it is open, free and democratic and which provides the maximum reach of users. I love to create web applications that are user interactive, accessible and responsive while making my code clean and DRY.</p>
                         <p>I am well versed in Agile and Waterfall software development methodologies and have extensive experience working in Scrum teams. I am also proficient in testing web and mobile applications ensuring all business requirements have been met.</p>
@@ -111,7 +119,6 @@
                     <li>
                         <i class="fas fa-code-branch" aria-hidden="true"></i>
                         <span class="sr-only">github logo</span>
-                        <!-- <i class="devicon-git-plain"></i> -->
                         <p>GitHub</p>
                     </li>
                     <li>
