updated media queries :white_heart:

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
                 <p class="sr-only">I am a front-end web developer.</p>
                 <p class="sr-only">I am based in Toronto.</p>
             </div>
-            <a href="#about"><i class="fas fa-mouse" aria-hidden="true"></i></a>
+            <!-- <a href="#about"><i class="fas fa-mouse" aria-hidden="true"></i></a> -->
         </div>
+        <div><a href="#about"><i class="fas fa-mouse" aria-hidden="true"></i></a></div>
     </header>
 
     <main>
@@ -147,7 +148,7 @@
                     <div><img src="assets/images/TILES.png" alt="screenshot of TILES project showing all the tiles as matched"></div>
                     <div class="description">
                         <h3>tiles</h3>
-                        <p>A tile based memory game where the player matches the tiles using colours. Keeps track of the number of attempts required to match the tiles. Offers a continuous mode play option @320px.</p>
+                        <p>A tile based memory game where the player matches the tiles using colours. The game keeps track of the number of attempts required to match the tiles and offers a continuous mode play option @320px.</p>
                         <p>HTML5 | CSS3 | Sass | JavaScript | jQuery | Responsive</p>
                         <a href="https://github.com/rahatbd/rahatRahmanProjectThree" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
                         <a href="https://rahatrahman.com/TILES/">Live Link</a>
@@ -211,18 +212,20 @@
                     <div>
                         <p>Thank you for visiting my portfolio. If you would like to connect, you can contact me through my form on the <span class="left">left</span><span class="top">top</span>.</p>
                         <p>You can also find me on social media or book a meeting through Calendly below.</p>
-                        <a href="https://medium.com/@rahat.me" target="_blank" rel="noopener noreferrer" aria-label="go to Rahat Rahman's blog on medium"><i class="fab fa-medium" aria-hidden="true"></i></a>
-                        <a href="https://www.linkedin.com/in/rahat-rahman" target="_blank" rel="noopener noreferrer" aria-label="go to Rahat Rahman's profile on linkedin"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
-                        <a href="https://github.com/rahatbd" target="_blank" rel="noopener noreferrer" aria-label="go to Rahat Rahman's repo on github"><i class="fab fa-github-square" aria-hidden="true"></i></a>
-                        <!-- aria-label="go to Rahat Rahman's calendly to book a 30 minute meeting" -->
-                        <a href="" onclick="Calendly.initPopupWidget({url:'https://calendly.com/rahatrahman/30min'});return false;">
-                            <svg height="40" width="40" viewBox="7.4 0 344.6 360" xmlns="http://www.w3.org/2000/svg">
-                                <g fill="#fafafa">
-                                    <path d="m313.8 360h-268.3c-21 0-38.1-17.1-38.1-38.1v-268.4c0-21 17.1-38.1 38.1-38.1h268.3c21 0 38.1 17.1 38.1 38.1v268.3c.1 21.1-17 38.2-38.1 38.2zm-268.3-323.5c-9.4 0-17 7.6-17 17v268.3c0 9.4 7.6 17 17 17h268.3c9.4 0 17-7.6 17-17v-268.3c0-9.4-7.6-17-17-17z"/>
-                                    <path d="m256.6 72.4c-4.5 0-8.1-3.6-8.1-8.1v-56.2c0-4.5 3.6-8.1 8.1-8.1s8.1 3.6 8.1 8.1v56.1c0 4.5-3.6 8.2-8.1 8.2zm-154.7 0c-4.5 0-8.1-3.6-8.1-8.1v-56.2c0-4.5 3.6-8.1 8.1-8.1s8.1 3.6 8.1 8.1v56.1c.1 4.5-3.6 8.2-8.1 8.2zm87.5 181.4c-33.6 0-60.9-27.3-60.9-60.9s27.3-60.9 60.9-60.9c15.2 0 29.7 5.6 40.9 15.8 1.4 1.2 1.5 3.4.2 4.7-1.2 1.4-3.4 1.5-4.7.2-10-9.1-22.9-14.1-36.4-14.1-29.9 0-54.2 24.3-54.2 54.2s24.3 54.2 54.2 54.2c13.5 0 26.4-5 36.4-14.1 1.4-1.2 3.5-1.1 4.7.2 1.2 1.4 1.1 3.5-.2 4.7-11.2 10.4-25.7 16-40.9 16z"/>
-                                </g>
-                            </svg>
-                        </a>
+                        <div>
+                            <a href="https://medium.com/@rahat.me" target="_blank" rel="noopener noreferrer" aria-label="go to Rahat Rahman's blog on medium"><i class="fab fa-medium" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/rahat-rahman" target="_blank" rel="noopener noreferrer" aria-label="go to Rahat Rahman's profile on linkedin"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://github.com/rahatbd" target="_blank" rel="noopener noreferrer" aria-label="go to Rahat Rahman's repo on github"><i class="fab fa-github-square" aria-hidden="true"></i></a>
+                            <!-- aria-label="go to Rahat Rahman's calendly to book a 30 minute meeting" -->
+                            <a href="" onclick="Calendly.initPopupWidget({url:'https://calendly.com/rahatrahman/30min'});return false;">
+                                <svg height="40" width="40" viewBox="7.4 0 344.6 360" xmlns="http://www.w3.org/2000/svg">
+                                    <g fill="#fafafa">
+                                        <path d="m313.8 360h-268.3c-21 0-38.1-17.1-38.1-38.1v-268.4c0-21 17.1-38.1 38.1-38.1h268.3c21 0 38.1 17.1 38.1 38.1v268.3c.1 21.1-17 38.2-38.1 38.2zm-268.3-323.5c-9.4 0-17 7.6-17 17v268.3c0 9.4 7.6 17 17 17h268.3c9.4 0 17-7.6 17-17v-268.3c0-9.4-7.6-17-17-17z"/>
+                                        <path d="m256.6 72.4c-4.5 0-8.1-3.6-8.1-8.1v-56.2c0-4.5 3.6-8.1 8.1-8.1s8.1 3.6 8.1 8.1v56.1c0 4.5-3.6 8.2-8.1 8.2zm-154.7 0c-4.5 0-8.1-3.6-8.1-8.1v-56.2c0-4.5 3.6-8.1 8.1-8.1s8.1 3.6 8.1 8.1v56.1c.1 4.5-3.6 8.2-8.1 8.2zm87.5 181.4c-33.6 0-60.9-27.3-60.9-60.9s27.3-60.9 60.9-60.9c15.2 0 29.7 5.6 40.9 15.8 1.4 1.2 1.5 3.4.2 4.7-1.2 1.4-3.4 1.5-4.7.2-10-9.1-22.9-14.1-36.4-14.1-29.9 0-54.2 24.3-54.2 54.2s24.3 54.2 54.2 54.2c13.5 0 26.4-5 36.4-14.1 1.4-1.2 3.5-1.1 4.7.2 1.2 1.4 1.1 3.5-.2 4.7-11.2 10.4-25.7 16-40.9 16z"/>
+                                    </g>
+                                </svg>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
