--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="wrapper">
                 <h2>Projects</h2>
                 <div class="project projectOne">
-                    <div><img src="assets/images/TILES.png" alt="screenshot of TILES project showing all the tiles as matched"></div>
+                    <div><img src="assets/images/TILES.jpg" alt="screenshot of TILES project showing all the tiles as matched"></div>
                     <div class="description">
                         <h3>tiles</h3>
                         <p>A tile based memory game where the player matches the tiles using colours. The game keeps track of the number of attempts required to match the tiles and offers a continuous mode play option @320px.</p>
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <div class="project projectTwo">
-                    <div><img src="assets/images/NEWS.png" alt="screenshot of news project showing the latest canadian headlines"></div>
+                    <div><img src="assets/images/NEWS.jpg" alt="screenshot of news project showing the latest canadian headlines"></div>
                     <div class="description">
                         <h3>news project</h3>
                         <p>A news aggregator website made using the NewsAPI. The website fetches the latest headlines along with news from three other categories for both Canada and US.</p>
@@ -165,7 +165,7 @@
                     </div>
                 </div>
                 <div class="project projectThree">
-                    <div><img src="assets/images/COVID19.png" alt="screenshot of covid 19 project showing the canadian case numbers on August 25 until 3:37 pm EDT"></div>
+                    <div><img src="assets/images/COVID19.jpg" alt="screenshot of covid 19 project showing the canadian case numbers on August 25 until 3:37 pm EDT"></div>
                     <div class="description">
                         <h3>covid-19 tracker</h3>
                         <p>A COVID-19 tracking app that displays the latest coronavirus case numbers globally as well as for 186 countries or territories using the COVID 19 API.</p>
@@ -175,7 +175,7 @@
                     </div>
                 </div>
                 <div class="project projectFour">
-                    <div><img src="assets/images/project-2.png" alt="screenshot of under the sea project showing the header image, heading and menu items"></div>
+                    <div><img src="assets/images/project-2.jpg" alt="screenshot of under the sea project showing the header image, heading and menu items"></div>
                     <div class="description">
                         <h3>under the sea</h3>
                         <p>A multi-page client PSD conversion project that is fully responsive across all devices and made pixel-perfect using a style guide and design specification.</p>
