added hamburger menu :white_heart:

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 <body>
     <header>
         <div class="wrapper head">
-            <nav>
+            <i class="fas fa-bars" aria-label="menu" role="button" aria-controls="navigation" tabindex="0"> menu</i>
+            <div id="background"></div>
+            <nav id="navigation">
                 <ul>
                     <li><a href="#about">About</a></li>
                     <li><a href="#skills">Skills</a></li>
