--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
 <body>
     <header>
         <div class="wrapper head">
-            <i class="fas fa-bars" aria-label="menu" role="button" aria-controls="navigation" tabindex="0"> menu</i>
+            <button class="hamburger hamburger--emphatic" type="button" aria-label="menu" aria-controls="navigation">
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+                <span class="label">menu</span>
+            </button>
             <div id="background"></div>
             <nav id="navigation">
                 <ul>
@@ -243,6 +248,7 @@
 
     <!-- scramble.js courtesy of the YouTube video channel 'Online web ustaad'. Refer to the original video here: https://www.youtube.com/watch?v=lI303Jm4fbs -->
     <script src='https://code.jquery.com/jquery-3.5.1.min.js' integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=' crossorigin='anonymous'></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script src="scripts/scramble.js"></script>
     <script src="scripts/script.js"></script>
