updated hamburger menu :white_heart:

--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
 <body>
     <header id="home">
         <div class="wrapper head">
-            <button class="hamburger hamburger--emphatic" type="button" aria-label="menu" aria-controls="navigation">
-                <span class="hamburger-box">
-                    <span class="hamburger-inner"></span>
-                </span>
-                <span class="label">menu</span>
-            </button>
+            <div class="hamburgerMenu">
+                <button class="hamburger hamburger--emphatic" type="button" aria-label="menu" aria-controls="navigation">
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
+                    <span class="label">menu</span>
+                </button>
+            </div>
             <div id="background"></div>
             <nav id="navigation">
                 <ul>
