--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css" rel="stylesheet">
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet">
     <title>Rahat Rahman | Portfolio</title>
 </head>
@@ -28,7 +29,7 @@
 <body>
     <header id="home">
         <div class="wrapper head">
-            <div class="hamburgerMenu">
+            <div class="hamburgerMenu" data-aos="fade-down">
                 <button class="hamburger hamburger--emphatic" type="button" aria-label="menu" aria-controls="navigation">
                     <span class="hamburger-box">
                         <span class="hamburger-inner"></span>
@@ -38,7 +39,7 @@
             </div>
             <div id="background"></div>
             <nav id="navigation">
-                <ul>
+                <ul data-aos="fade-down">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#skills">Skills</a></li>
@@ -62,7 +63,7 @@
             <div class="wrapper">
                 <h2>About</h2>
                 <div class="aboutSection">
-                    <div class="profile"><img src="https://rahatrahman.com/photos/profile.jpeg" alt="Rahat Rahman's profile picture"></div>
+                    <div class="profile" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="https://rahatrahman.com/photos/profile.jpeg" alt="Rahat Rahman's profile picture"></div>
                     <div>
                         <p>I'm a front-end web developer located in Toronto, ON. I am passionate about web as a platform since it is open, free and democratic and which provides the maximum reach of users. I love to create web applications that are user interactive, accessible and responsive while making my code clean and DRY.</p>
                         <p>I am well versed in Agile and Waterfall software development methodologies and have extensive experience working in Scrum teams. I am also proficient in testing web and mobile applications ensuring all business requirements have been met.</p>
@@ -75,7 +76,7 @@
         <section class="skills" id="skills">
             <div class="wrapper">
                 <h2>Skills</h2>
-                <ul class="icons">
+                <ul class="icons" data-aos="zoom-in" data-aos-once="true" data-aos-duration="800">
                     <li>
                         <i class="fab fa-html5" aria-hidden="true"></i>
                         <span class="sr-only">HTML5 logo</span>
@@ -154,7 +155,7 @@
             <div class="wrapper">
                 <h2>Projects</h2>
                 <div class="project projectOne">
-                    <div><img src="assets/images/TILES.jpg" alt="screenshot of TILES project showing all the tiles as matched"></div>
+                    <div data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="assets/images/TILES.jpg" alt="screenshot of TILES project showing all the tiles as matched"></div>
                     <div class="description">
                         <h3>tiles</h3>
                         <p>A tile based memory game where the player matches the tiles using colours. The game keeps track of the number of attempts required to match the tiles and offers a continuous mode play option @320px.</p>
@@ -165,7 +166,7 @@
                     </div>
                 </div>
                 <div class="project projectTwo">
-                    <div><img src="assets/images/NEWS.jpg" alt="screenshot of news project showing the latest canadian headlines"></div>
+                    <div data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="assets/images/NEWS.jpg" alt="screenshot of news project showing the latest canadian headlines"></div>
                     <div class="description">
                         <h3>news project</h3>
                         <p>A news aggregator website made using the NewsAPI. The website fetches the latest headlines along with news from three other categories for both Canada and US.</p>
@@ -175,7 +176,7 @@
                     </div>
                 </div>
                 <div class="project projectThree">
-                    <div><img src="assets/images/COVID19.jpg" alt="screenshot of covid 19 project showing the canadian case numbers on August 25 until 3:37 pm EDT"></div>
+                    <div data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="assets/images/COVID19.jpg" alt="screenshot of covid 19 project showing the canadian case numbers on August 25 until 3:37 pm EDT"></div>
                     <div class="description">
                         <h3>covid-19 tracker</h3>
                         <p>A COVID-19 tracking app that displays the latest coronavirus case numbers globally as well as for 186 countries or territories using the COVID 19 API.</p>
@@ -185,7 +186,7 @@
                     </div>
                 </div>
                 <div class="project projectFour">
-                    <div><img src="assets/images/project-2.jpg" alt="screenshot of under the sea project showing the header image, heading and menu items"></div>
+                    <div data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="assets/images/project-2.jpg" alt="screenshot of under the sea project showing the header image, heading and menu items"></div>
                     <div class="description">
                         <h3>under the sea</h3>
                         <p>A multi-page client PSD conversion project that is fully responsive across all devices and made pixel-perfect using a style guide and design specification.</p>
@@ -222,7 +223,7 @@
                     <div>
                         <p>Thank you for visiting my portfolio. If you would like to connect, you can contact me through my form on the <span class="left">left</span><span class="top">top</span>.</p>
                         <p>You can also find me on social media or book a meeting through Calendly below.</p>
-                        <div>
+                        <div data-aos="fade-up" data-aos-duration="1000">
                             <a href="https://medium.com/@rahat.me" title="Medium" target="_blank" rel="noopener noreferrer" aria-label="go to Rahat Rahman's blog on medium"><i class="fab fa-medium" aria-hidden="true"></i></a>
                             <a href="https://www.linkedin.com/in/rahat-rahman" title="LinkedIn" target="_blank" rel="noopener noreferrer" aria-label="go to Rahat Rahman's profile on linkedin"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
                             <a href="https://github.com/rahatbd" title="GitHub" target="_blank" rel="noopener noreferrer" aria-label="go to Rahat Rahman's repo on github"><i class="fab fa-github-square" aria-hidden="true"></i></a>
@@ -253,6 +254,7 @@
     <script src='https://code.jquery.com/jquery-3.5.1.min.js' integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=' crossorigin='anonymous'></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="scripts/scramble.js"></script>
     <script src="scripts/script.js"></script>
 </body>
