portfolio updates :white_heart:

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Rahat Rahman">
+    <meta name="description" content="Portfolio site of Rahat Rahman">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177713480-1"></script>
@@ -18,6 +20,7 @@
     <link href="assets/favicons/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
     <link href="assets/favicons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
     <link href="assets/favicons/site.webmanifest" rel="manifest">
+    <link href="https://rahatrahman.com/" rel="canonical">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css" rel="stylesheet">
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
@@ -37,6 +40,7 @@
                     <span class="label">menu</span>
                 </button>
             </div>
+            <div class="cursor"></div>
             <div id="background"></div>
             <nav id="navigation">
                 <ul data-aos="fade-down">
@@ -223,7 +227,7 @@
                     <div>
                         <p>Thank you for visiting my portfolio. If you would like to connect, you can contact me through my form on the <span class="left">left</span><span class="top">top</span>.</p>
                         <p>You can also find me on social media or book a meeting through Calendly below.</p>
-                        <div data-aos="fade-up" data-aos-duration="1000">
+                        <div data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">
                             <a href="https://medium.com/@rahat.me" title="Medium" target="_blank" rel="noopener noreferrer" aria-label="go to Rahat Rahman's blog on medium"><i class="fab fa-medium" aria-hidden="true"></i></a>
                             <a href="https://www.linkedin.com/in/rahat-rahman" title="LinkedIn" target="_blank" rel="noopener noreferrer" aria-label="go to Rahat Rahman's profile on linkedin"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
                             <a href="https://github.com/rahatbd" title="GitHub" target="_blank" rel="noopener noreferrer" aria-label="go to Rahat Rahman's repo on github"><i class="fab fa-github-square" aria-hidden="true"></i></a>
